# vm-virtio

./: Cargo.toml  coverage_config_x86_64.json
src/: error.rs  lib.rs  queue.rs
src/block/: request.rs  stdio_executor.rs
src/device/: mmio.rs  mod.rs  virtio_config.rs
src/devices/: example_device.rs  mmio.rs  mod.rs  virtio_config.rs
src/proto/: mod.rs  queue.rs
src/proto/virtio/: device.rs  mmio.rs  mod.rs  queue.rs
src/proto/virtio/block/: example.rs  handler.rs  mod.rs  request.rs
src/queue/: descriptor_chain.rs
