[package]
name = "vm-virtio"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
description = "virtio specification implementation"
repository = "https://github.com/rust-vmm/vm-virtio"
keywords = ["virtio"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
byteorder = "=1.2.1"
epoll = "=4.0.1"
event-manager = {version = ">=0.1.0", features = ["remote_endpoint"] }
libc = ">=0.2.39"
log = "=0.4.6"
kvm-ioctls = ">=0.5.0"
vm-memory = ">=0.2.0"
vmm-sys-util = ">=0.6.0"

vm-device = { git = "https://github.com/alexandruag/vm-device.git", branch = "master" }

[dev-dependencies.vm-memory]
version = ">=0.2.0"
features = ["backend-mmap"]
